fix align

--- a/themes/enchanted-lowkey/assets/css/tailwind.css
+++ b/themes/enchanted-lowkey/assets/css/tailwind.css
@@ -121,7 +121,7 @@
   }
   
   h1, h2, h3, h4, h5, h6 {
-    @apply font-bold text-gray-900 dark:text-gray-300 mb-5 pt-2;
+    @apply font-bold text-gray-900 text-left dark:text-gray-300 mb-5 pt-2;
   }
   
   h1 {
